--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "vue-i18n": "^7.6.0"
+    "dotenv": "^5.0.1",
+    "vue-i18n": "^7.6.0",
+    "vuelidate": "^0.6.2"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
