Use JWT properly
Because of this there needed to be some heavy refactoring in the code to
separate the user and the access token and in doing so the pages have
become less coupled and are now using a more reactful pattern.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "top/spa",
+  "name": "top-spa",
   "version": "1.0.0",
   "description": "SPA for the Tailoring Online Platform",
   "productName": "tailoring.io",
