--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,16 @@
 {
   "presets": [
-    [ "env", {"modules": false} ],
-    "stage-2"
+    [
+      "env",
+      {
+        "targets": {
+          "browsers": ["last 2 versions", "safari >= 7"]
+        }
+      }
+    ],
+    "stage-2",
+    "stage-3"
   ],
-  "plugins": ["transform-runtime"],
+  "plugins": ["transform-runtime", "syntax-async-functions","transform-regenerator"],
   "comments": false
 }
