--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "axios": "^0.18.0",
     "dotenv": "^5.0.1",
     "vue-i18n": "^7.6.0",
-    "vuelidate": "^0.6.2"
+    "vuelidate": "^0.6.2",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
